force-app/main/default/objects/TelesalesPlan__c/TelesalesPlan__c.object-meta.xml
<CustomObject>
    <label>Telesales Plan</label>
    <nameField>
        <displayFormat>TP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telesales Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>