force-app/main/default/objects/TelesalesPlan__c/fields/QuantityDetailLines__c.field-meta.xml
<CustomField>
    <fullName>QuantityDetailLines__c</fullName>
    <label>Quantity Detail</label>
    <summaryForeignKey>TelesalesPlanDetail__c.TelesalesPlan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>