force-app/main/default/objects/TelesalesPlan__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Holidays</fullName>
            </value>
            <value>
                <fullName>Out of Office</fullName>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>