force-app/main/default/objects/TelesalesPlan__c/fields/TelemarketerFormula__c.field-meta.xml
<CustomField>
    <fullName>TelemarketerFormula__c</fullName>
    <formula>TelesalesWorkPlan__r.Telemarketer__r.FirstName&amp;&#39; &#39;&amp;TelesalesWorkPlan__r.Telemarketer__r.LastName</formula>
    <label>Telemarketer</label>
    <type>Text</type>
</CustomField>