force-app/main/default/objects/TelesalesPlan__c/fields/TelesalesWorkPlan__c.field-meta.xml
<CustomField>
    <fullName>TelesalesWorkPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Telesales Work Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TelesalesPlan__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>WorkPlan</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TelesalesPlan__c</referenceTo>
    <relationshipLabel>Telesales Work Plans</relationshipLabel>
    <relationshipName>TelesalesWorkPlans</relationshipName>
    <type>Lookup</type>
</CustomField>