force-app/main/default/objects/TelesalesPlan__c/recordTypes/ContingencyPlan.recordType-meta.xml
<RecordType>
    <fullName>ContingencyPlan</fullName>
    <active>true</active>
    <label>Contingency Plan</label>
</RecordType>