force-app/main/default/objects/TelesalesPlan__c/recordTypes/WorkPlan.recordType-meta.xml
<RecordType>
    <fullName>WorkPlan</fullName>
    <active>true</active>
    <label>Work Plan</label>
</RecordType>