force-app/main/default/objects/TelesalesPlan__c/validationRules/AVX_ContingencyPlan.validationRule-meta.xml
<ValidationRule>
    <fullName>AVX_ContingencyPlan</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
RecordType.DeveloperName = &#39;ContingencyPlan&#39;,
NOT(ISBLANK(TelesalesWorkPlan__c)),
TelesalesWorkPlan__r.QuantityDetailLines__c &lt;= 0)</errorConditionFormula>
    <errorMessage>You cannot create a Contingency Plan to this Work Plan, because the work plan doesn&#39;t has an client assigned.</errorMessage>
</ValidationRule>