force-app/main/default/objects/TelesalesPlan__c/validationRules/AVX_ContingencyPlanDate.validationRule-meta.xml
<ValidationRule>
    <fullName>AVX_ContingencyPlanDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;ContingencyPlan&#39;,
NOT(ISBLANK(TelesalesWorkPlan__c)),
EndDate__c &gt; TelesalesWorkPlan__r.EndDate__c)</errorConditionFormula>
    <errorMessage>The End Date cannot be greater than the end date of Work Plan.</errorMessage>
</ValidationRule>