force-app/main/default/objects/TelesalesPlan__c/validationRules/AVX_NotChangeTeleSales.validationRule-meta.xml
<ValidationRule>
    <fullName>AVX_NotChangeTeleSales</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(QuantityDetailLines__c &gt; 0, ISCHANGED( Telemarketer__c)), true, false)</errorConditionFormula>
    <errorMessage>You cannot change the seller, because there are customers signed up for the same.</errorMessage>
</ValidationRule>