force-app/main/default/objects/TelesalesPlan__c/validationRules/AVX_ValidatyStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>AVX_ValidatyStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(OR( ISNEW(),ISCHANGED( StartDate__c) ),
OR(StartDate__c &lt; TODAY(),StartDate__c &gt; EndDate__c)
),true,false)</errorConditionFormula>
    <errorMessage>The start date cannot be less than today&#39;s date or greater than the end date.</errorMessage>
</ValidationRule>