force-app/main/default/objects/TelesalesPlan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Telemarketer__c</columns>
    <columns>TelemarketerFormula__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>