force-app/main/default/objects/TelesalesPlan__c/listViews/Contingency_Plan.listView-meta.xml
<ListView>
    <fullName>Contingency_Plan</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>TelemarketerFormula__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TelesalesPlan__c.ContingencyPlan</value>
    </filters>
    <label>Contingency Plan</label>
</ListView>