force-app/main/default/objects/TelesalesPlan__c/listViews/Work_Plan.listView-meta.xml
<ListView>
    <fullName>Work_Plan</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Telemarketer__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TelesalesPlan__c.WorkPlan</value>
    </filters>
    <label>Work Plan</label>
</ListView>